# OxideDock

./: .gitignore  Cargo.toml  config.json  index.html  skills-lock.json  vite.config.ts
src/: config.rs  icon_extractor.rs  main.rs  main.ts  styles.css  window.rs
src-tauri/: Cargo.toml  build_errors.txt  build_trace.txt  tauri.conf.json
src-tauri/src/: config.rs  lib.rs
tauri-app/src/: main.ts  styles.css
tauri-app/src-tauri/: Cargo.toml  config.json  tauri.conf.json
tauri-app/src-tauri/src/: icon_extractor.rs  lib.rs
