[package]
name = "OxideDock"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
windows-icons = "0.3"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_WinRT", "Win32_System_WinRT_Composition", "UI_Composition", "UI_Composition_Desktop", "UI_Composition_Effects", "Foundation", "Foundation_Numerics", "System", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Shell", "Win32_System_LibraryLoader", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_Graphics_Direct2D", "Win32_Graphics_Direct2D_Common", "Win32_Graphics_Imaging", "Win32_Graphics_Dxgi_Common", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com_StructuredStorage", "Win32_UI_Shell_Common", "Win32_UI_Controls", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D", "Win32_Graphics_Imaging_D2D", "Graphics_DirectX", "Win32_UI_Input_KeyboardAndMouse"] }
windows-targets = "0.53.5"
